--- a/gestCursos/pages/front/front.Master
+++ b/gestCursos/pages/front/front.Master
@@ -15,8 +15,8 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <!-- MDB -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.3.1/mdb.min.css" rel="stylesheet" />
-    <link href="\assests\style\style.css" rel="stylesheet" />
-    <script src="\assests\js\script.js"></script>
+    <link href="\Assets\style\style.css" rel="stylesheet" />
+    <script src="\Assets\js\script.js"></script>
 </head>
 <body>
     <form id="form1" runat="server">
@@ -25,7 +25,7 @@
             <div class="container-fluid">
                 <!-- Logo and Slogan -->
                 <div class="d-flex align-items-center">
-                    <img src="\assests\img\logo.png" alt="Logo" class="logo me-2" />
+                    <img src="\assets\img\logo.png" alt="Logo" class="logo me-2" />
                     <span class="slogan">Empower Your Future</span>
                 </div>
 
@@ -139,7 +139,7 @@
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.3.1/mdb.umd.min.js"></script>
-    <script src="\assests\js\script.js"></script>
-    <script src="\assests\js\modal-handler.js"></script>
+    <script src="\Assets\js\script.js"></script>
+    <script src="\Assets\js\modal-handler.js"></script>
 </body>
 </html>
